syntax = "proto3";

package user;

service EditUser {
  rpc updateUser (UserDto) returns (Empty);
  rpc stream (UserId) returns (stream UserDto);
}

message UserDto {
  int32 id = 1;
  string name = 2;
  string password = 3;
  string email = 4;
}

message Empty {}

message UserId {
  int32 id = 1;
}
